--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 remote_theme: pages-themes/slate@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
-title: Rethinking computational approaches to the brain 
+title: Rethinking computational approaches to the mind 
 description: Fundamental challenges and future perspectives 
 show_downloads: false
 header: index.png
